k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nestjs-service


spec:
  selector:
    app: nestjs-api
  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
