k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nestjs-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: placeholder
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: nestjs-service
            port:
              number: 80
